unpackaged/main/default/objects/Contact/fields/Are_You_Able_to_Serve_the_Whole_Weekend__c.field-meta.xml
<CustomField>
    <fullName>Are_You_Able_to_Serve_the_Whole_Weekend__c</fullName>
    <label>Are You Able to Serve the Whole Weekend?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>