unpackaged/main/default/objects/Contact/fields/Are_You_Interested_in_Being_a_Coach__c.field-meta.xml
<CustomField>
    <fullName>Are_You_Interested_in_Being_a_Coach__c</fullName>
    <description>Are you interested in volunteering as a coach?</description>
    <label>Are You Interested in Being a Coach?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>