unpackaged/main/default/objects/Contact/fields/Area_To_Serve_In_1st_Choice__c.field-meta.xml
<CustomField>
    <fullName>Area_To_Serve_In_1st_Choice__c</fullName>
    <description>Which area would you like to serve in? (1st Choice)</description>
    <label>Area To Serve In (1st Choice)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wherever Needed</fullName>
            </value>
            <value>
                <fullName>Activities</fullName>
            </value>
            <value>
                <fullName>Agape</fullName>
            </value>
            <value>
                <fullName>Event Clean Up</fullName>
            </value>
            <value>
                <fullName>Event Set-up &amp; Logistics (Everyone)</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>Food Service</fullName>
            </value>
            <value>
                <fullName>Grounds &amp; Facilities</fullName>
            </value>
            <value>
                <fullName>Guest Registration &amp; Greeting</fullName>
            </value>
            <value>
                <fullName>Photography</fullName>
            </value>
            <value>
                <fullName>Prayer</fullName>
            </value>
            <value>
                <fullName>Tent Set-up</fullName>
            </value>
            <value>
                <fullName>Valet &amp; Transportation</fullName>
            </value>
            <value>
                <fullName>Volunteer Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>