unpackaged/main/default/objects/Contact/fields/Code_of_Conduct_Completed__c.field-meta.xml
<CustomField>
    <fullName>Code_of_Conduct_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Code of Conduct Completed</label>
    <type>Checkbox</type>
</CustomField>