unpackaged/main/default/objects/Contact/fields/Days_Able_to_Serve__c.field-meta.xml
<CustomField>
    <fullName>Days_Able_to_Serve__c</fullName>
    <description>What days are you able to serve?</description>
    <label>Days Able to Serve</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>Sunday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>