unpackaged/main/default/objects/Contact/fields/Have_Volunteer_Shirt__c.field-meta.xml
<CustomField>
    <fullName>Have_Volunteer_Shirt__c</fullName>
    <description>Do you already have your volunteer T-Shirts?</description>
    <label>Have Volunteer Shirt?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>