unpackaged/main/default/objects/Contact/fields/Help_With_Luggage_and_Greeting__c.field-meta.xml
<CustomField>
    <fullName>Help_With_Luggage_and_Greeting__c</fullName>
    <description>Can you help with luggage, transportation, and greeting Friday afternoon beginning at 2PM?</description>
    <inlineHelpText>Can you help with luggage, transportation, and greeting Friday afternoon beginning at 2PM?</inlineHelpText>
    <label>Help With Luggage and Greeting?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>