unpackaged/main/default/objects/Contact/fields/JHID__c.field-meta.xml
<CustomField>
    <fullName>JHID__c</fullName>
    <description>JHEA Universal ID</description>
    <externalId>true</externalId>
    <inlineHelpText>The unique constituent identifier (Accounts and Contacts) across JHEA</inlineHelpText>
    <label>JHID</label>
    <length>6</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>