unpackaged/main/default/objects/Contact/fields/Medical_Release_Form_Completed__c.field-meta.xml
<CustomField>
    <fullName>Medical_Release_Form_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical Release Form Completed</label>
    <type>Checkbox</type>
</CustomField>