unpackaged/main/default/objects/Contact/fields/Minor_s_Release_Completed__c.field-meta.xml
<CustomField>
    <fullName>Minor_s_Release_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Minor&#39;s Release Completed</label>
    <type>Checkbox</type>
</CustomField>