unpackaged/main/default/objects/Contact/fields/Need_Lodging__c.field-meta.xml
<CustomField>
    <fullName>Need_Lodging__c</fullName>
    <description>Will you need lodging for the weekend?</description>
    <label>Need Lodging?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>