unpackaged/main/default/objects/Contact/fields/Number_of_Events_Registered_For__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Events_Registered_For__c</fullName>
    <description>Number of events registered for. Field utilized for a record triggered flow to uncheck the Forms Complete checkbox.</description>
    <label>Number of Events Registered For</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>