unpackaged/main/default/objects/Contact/fields/Participant_s_Release_Completed__c.field-meta.xml
<CustomField>
    <fullName>Participant_s_Release_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Participant&#39;s Release Completed</label>
    <type>Checkbox</type>
</CustomField>