unpackaged/main/default/objects/Contact/fields/Photo__c.field-meta.xml
<CustomField>
    <fullName>Photo__c</fullName>
    <formula>IMAGE(IF(ISBLANK(PhotoFile__c), &#39;https://veracitek.com/jhea_sf/cp_4sf/FaceSilhouette.png&#39;,&#39;https://veracitek.com/jhea_sf/cp_4sf/&#39;+PhotoFile__c),&#39;ContactPhoto&#39;,160,120)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Photo</label>
    <type>Text</type>
</CustomField>