unpackaged/main/default/objects/Contact/fields/PhotoFile__c.field-meta.xml
<CustomField>
    <fullName>PhotoFile__c</fullName>
    <description>This is used by the photo formula field</description>
    <label>PhotoFile</label>
    <length>32</length>
    <type>Text</type>
</CustomField>