unpackaged/main/default/objects/Contact/fields/Plan_to_Book_Own_Lodging__c.field-meta.xml
<CustomField>
    <fullName>Plan_to_Book_Own_Lodging__c</fullName>
    <description>We have limited availability for Volunteers to stay on-site. Would you like to request to stay on-site (accommodations vary) or do you plan to book your own lodging at a nearby hotel?</description>
    <label>Plan to Book Own Lodging?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I would like to request to stay on site</fullName>
            </value>
            <value>
                <fullName>I plan to book a hotel, or have alternate lodging</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>