unpackaged/main/default/objects/Contact/fields/PreferredName__c.field-meta.xml
<CustomField>
    <fullName>PreferredName__c</fullName>
    <description>&quot;Goes by&quot; name</description>
    <inlineHelpText>The name the contact prefers to go by</inlineHelpText>
    <label>PreferredName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>