unpackaged/main/default/objects/Contact/fields/RaiseDonors_Donor_ID__c.field-meta.xml
<CustomField>
    <fullName>RaiseDonors_Donor_ID__c</fullName>
    <externalId>true</externalId>
    <label>RaiseDonors Donor ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>