unpackaged/main/default/objects/Contact/fields/Required_Forms_Completed__c.field-meta.xml
<CustomField>
    <fullName>Required_Forms_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required Forms Completed</label>
    <type>Checkbox</type>
</CustomField>