unpackaged/main/default/objects/Contact/fields/Statement_of_Faith_Completed__c.field-meta.xml
<CustomField>
    <fullName>Statement_of_Faith_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Statement of Faith Completed</label>
    <type>Checkbox</type>
</CustomField>