unpackaged/main/default/objects/Contact/fields/T_Shirt_Size__c.field-meta.xml
<CustomField>
    <fullName>T_Shirt_Size__c</fullName>
    <description>What is your T-Shirt size?</description>
    <label>T Shirt Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>XL</fullName>
            </value>
            <value>
                <fullName>2XL</fullName>
            </value>
            <value>
                <fullName>3XL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>