unpackaged/main/default/objects/Contact/fields/Which_Group_Would_You_Like_to_Coach__c.field-meta.xml
<CustomField>
    <fullName>Which_Group_Would_You_Like_to_Coach__c</fullName>
    <description>Which group would you like to coach?</description>
    <label>Which Group Would You Like to Coach?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fathers</fullName>
            </value>
            <value>
                <fullName>Mothers</fullName>
            </value>
            <value>
                <fullName>Sons</fullName>
            </value>
            <value>
                <fullName>Daughters</fullName>
            </value>
            <value>
                <fullName>Husband &amp; Wife</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>