unpackaged/main/default/objects/Contact/listViews/JT_Caseload.listView-meta.xml
<ListView>
    <fullName>JT_Caseload</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <columns>npo02__LastCloseDate__c</columns>
    <columns>npo02__LastOppAmount__c</columns>
    <columns>npsp__Last_Soft_Credit_Date__c</columns>
    <columns>npsp__Last_Soft_Credit_Amount__c</columns>
    <columns>npo02__OppAmountLastYear__c</columns>
    <columns>npo02__Soft_Credit_Last_Year__c</columns>
    <columns>npo02__OppAmountThisYear__c</columns>
    <columns>npo02__Soft_Credit_This_Year__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>jtberney</value>
    </filters>
    <filters>
        <field>CONTACT.ADDRESS2_CITY</field>
        <operation>equals</operation>
        <value>homewood</value>
    </filters>
    <label>JT Caseload</label>
</ListView>