unpackaged/main/default/objects/Contact/listViews/MyContacts.listView-meta.xml
<ListView>
    <fullName>MyContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>npo02__LastCloseDate__c</columns>
    <columns>npo02__LastOppAmount__c</columns>
    <columns>npo02__OppAmountThisYear__c</columns>
    <columns>npo02__OppAmountLastYear__c</columns>
    <columns>npsp__Last_Soft_Credit_Date__c</columns>
    <columns>npsp__Last_Soft_Credit_Amount__c</columns>
    <columns>npo02__Soft_Credit_This_Year__c</columns>
    <columns>npo02__Soft_Credit_Last_Year__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>My Contacts</label>
</ListView>