unpackaged/main/default/objects/Contact/listViews/Rob_Caseload.listView-meta.xml
<ListView>
    <fullName>Rob_Caseload</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <columns>npo02__LastOppAmount__c</columns>
    <columns>npo02__LastCloseDate__c</columns>
    <columns>npsp__Last_Soft_Credit_Amount__c</columns>
    <columns>npsp__Last_Soft_Credit_Date__c</columns>
    <columns>npo02__Soft_Credit_This_Year__c</columns>
    <columns>npo02__OppAmountThisYear__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>rhsc</value>
    </filters>
    <label>Rob Caseload</label>
</ListView>